# tree-sitter-lpp

./: Cargo.toml  Makefile  Package.swift  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.lpp
bindings/c/: tree-sitter-lpp.pc.in
bindings/go/: binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_lpp/: __init__.py  binding.c
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
